fix overflow

--- a/pirate_party/assets/main.css
+++ b/pirate_party/assets/main.css
@@ -18,7 +18,7 @@
 #div-cams {
     grid-column: 2/3;
     grid-row: 1/2;
-    overflow-y: auto;
+    overflow: scroll;
 }
 
 #div-file {
