--- a/shared/comman.css
+++ b/shared/comman.css
@@ -10,11 +10,14 @@
     --border-normal: 2px solid;
     --font-size-normal: 14px;
     --header-logo-size: 20px;
+    --header-height: calc( var(--header-logo-size) * 2);
+    --footer-height: 4px;
+    --main-height: calc( 100vh - var(--header-height) - var(--footer-height) );
 }
 
 body {
     display: grid;
-    grid-template-rows: calc( var(--header-logo-size) * 2 ) auto 4px;
+    grid-template-rows: var(--header-height) var(--main-height) var(--footer-height);
     height: 100vh;
     margin: 0;
     font-family: monospace;
